deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: public.ecr.aws/p3w6l6w2/azim:latest
        ports:
        - containerPort: 8080 # Assuming your application runs on port 8080
