service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80 # Port on which the service will be exposed
      targetPort: 8080 # Port on which the application runs inside the container
  type: LoadBalancer
